# SvenBot

./: .env.example  .gitignore  README.md  app.yaml  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_archub.py  test_interactions.py  utility.py
SvenBot/: .env.example  config.py  gunicorn.conf.py  interactions.py  main.py  models.py  tasks.py  utility.py
SvenBot/commands/: arcomm_guild.py  command_models.py  global.py  leaf_guild.py  testing_guild.py
SvenBot/tests/: test_interactions.py  test_slack.py  test_tasks.py
commands/: arcomm_guild.py  command_utility.py  global.py  leaf_guild.py  testing_guild.py
src/: server.py
