[project]
name = "log-viewer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gunicorn==20.1.0",
    "uvicorn==0.23.1",
    "uvloop",
    "httptools==0.4.0",
    "apscheduler==3.9.1",
    "BeautifulSoup4==4.11.1",
    "d20==1.1.2",
    "fastapi==0.75.2",
    "freezegun==1.2.1",
    "httpx==0.22.0",
    "mypy==1.4.1",
    "pytest==7.1.2",
    "pytest-asyncio==0.18.3",
    "pytest-httpx==0.20.0",
    "python-dotenv==0.20.0",
    "pydantic==1.9.0",
    "pynacl==1.5.0",
    "requests==2.27.1",
    "ruff==0.9.9",
    "starlette==0.17.1",
    "SQLAlchemy==1.4.39",
    "types-beautifulsoup4==4.12.0.20250204",
    "types-requests==2.31.0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
    "RUF", # ruff
    # "PL" # pylint
    # "ANN" # flake8-annotations
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    # "PTH" # flake8-use-pathlib
]
ignore = [
    "E501", # line length
    "E402", # module import not at top of file
    "SIM102", # nested if statements
    # Shouldn't ignore
    "B008", # Function call in argument defaults
    "B006", # Mutable data structure for arguments
    "B011", # Don't assert False
    "DTZ001", # datetime() without tzinfo
    "DTZ003", # datetime.utcnow()
    "PT012", # pytest.raises()
    "RET503", # Missing explicit return
]