[project]
name = "svenbot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gunicorn==20.1.0",
    "uvicorn==0.23.1",
    "uvloop",
    "httptools==0.4.0",
    "apscheduler==3.9.1",
    "BeautifulSoup4==4.11.1",
    "d20==1.1.2",
    "fastapi==0.75.2",
    "httpx==0.22.0",
    "python-dotenv==0.20.0",
    "pydantic==1.9.0",
    "pynacl==1.5.0",
    "requests==2.27.1",
    "starlette==0.17.1",
    "SQLAlchemy==1.4.39",

]

[dependency-groups]
dev = [
    "freezegun==1.2.1",
    "mypy==1.4.1",
    "ruff==0.9.9",
    "pytest==7.1.2",
    "pytest-asyncio==0.18.3",
    "types-beautifulsoup4==4.12.0.20250204",
    "pytest-httpx==0.20.0",
    "types-requests==2.31.0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    # "YTT", # flake8-2020
    "ANN", # flake8-annotations
    # "ASYNC" # flake8-async
    # "S", # flake8-bandit
    # "BLE", # flake8-blind-except
    "B", # flake8-bugbear
    # "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    # "T10", # flake8-debugger
    # "EXE", # flake8-executable
    # "ISC", # flake8-implicit-str-concat
    # "ICN", # flake8-import-conventions
    # "INP", # flake8-no-pep420
    # "PIE", # flake8-pie
    # "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    # "RSE", # flake8-raise
    "RET", # flake8-return
    # "SLF", # flake8-self
    "SIM", # flake8-simplify
    # "TID", # flake8-tidy-imports
    # "ARG", # flake8-unused-arguments
    # "PTH", # flake8-use-pathlib
    # "PGH", # pygrep-hooks
    "PL", # pylint
    # "TRY", # tryceratops
    # "FLY", # flynt
    # "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line-too-long
    "PLR0913", # too-many-arguments
    "E402", # module import not at top of file
    "SIM102", # nested if statements


    # Shouldn't ignore
    "B008", # Function call in argument defaults
    "B006", # Mutable data structure for arguments
    "B011", # Don't assert False
    "DTZ001", # datetime() without tzinfo
    "DTZ003", # datetime.utcnow()
    "PT012", # pytest.raises()
    "RET503", # Missing explicit return
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["SvenBot", "gunicorn.conf", "global"]
